[gd_scene load_steps=6 format=3 uid="uid://dal87grgl1mri"]

[ext_resource type="Script" path="res://Scripts/Menu_Scripts/over_heating_node.gd" id="1_uox5c"]
[ext_resource type="Texture2D" uid="uid://bkx0jlmg30byq" path="res://Artwork/Backgrounds/OverHeat_Warning.png" id="2_rfb68"]

[sub_resource type="Animation" id="Animation_3nqht"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("OverHeating_Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_fg1xs"]
resource_name = "fluxuate"
length = 2.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("OverHeating_Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2, 2.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.392157), Color(1, 1, 1, 1), Color(1, 1, 1, 0.392157), Color(1, 1, 1, 0.733333), Color(1, 1, 1, 0.105882)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rxxtj"]
_data = {
"RESET": SubResource("Animation_3nqht"),
"fluxuate": SubResource("Animation_fg1xs")
}

[node name="OverHeating_Node" type="Node2D"]
script = ExtResource("1_uox5c")

[node name="OverHeating_Sprite" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
scale = Vector2(1.1307, 1.12678)
texture = ExtResource("2_rfb68")

[node name="OverHeatAnimPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rxxtj")
}

[connection signal="animation_finished" from="OverHeatAnimPlayer" to="." method="_on_over_heat_anim_player_animation_finished"]
